# messagebus

./: .gitignore  CMakeLists.txt  OtherQualityAssessment.docx  SelfQualityAssessment.docx
messagebus_pdf/: .gitignore  maketex.cmd  messagebus.tex
v1/: MessageBus.cpp  MessageBus.h  Node.cpp  Node.h  Simulator.cpp  TextMessage.cpp  TextMessage.h  TextMessageCompare.cpp  v1_exec
v2/: CMakeLists.txt  ImageMessage.cpp  ImageMessage.h  MeasurementMessage.cpp  MeasurementMessage.h  Message.cpp  Message.h  MessageBus.cpp  MessageBus.h  MessageCompare.cpp  Node.cpp  Node.h  Simulator.cpp  TextMessage.cpp  TextMessage.h  TextMessageCompare.cpp
v3/: CMakeLists.txt  ImageMessage.cpp  ImageMessage.h  MeasurementMessage.cpp  MeasurementMessage.h  Message.h  MessageBus.cpp  MessageBus.h  MessageCompare.cpp  Node.h  Nodes.cpp  Nodes.h  Simulator.cpp  TextMessage.h
v4/: CMakeLists.txt  MessageBus.h  NodeConfigReader - Copy.h  NodeConfigWriter.h  Simulator.cpp  node_clean.db
